--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Bluetooth</string>
+    <string name="list_paired_devices">Список подключиных устройств</string>
+    <string name="list_found_devices">Список найденных устройств</string>
+    <string name="boot_search_devices">искать</string>
 </resources>
